welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: not found: value %
	((%(a) == %(b)))
          ^